完成Q1、Q2，GC的总结还没写